# ci-scripts

./: .flake8  .gitignore  INTEGRATION_TESTS.md  README.md  Update-ExcelMetadata.ps1  __init__.py  apply-branch-protection.yml  auth_and_prepare.sh  check_excel_refs.py  coverage.xml  main-protection.json  mypy.ini  pyproject.toml  qualer-check.yml  qualer-upload-release.yml  requirements.txt  run_integration_tests.py  update_excel_metadata.py  upload_sop.py  upload_sop.sh  validate_upload.sh
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci.yml  pre-check.yml  protect-main.yml  qualer-check.yml  qualer-upload-release.yml  upload-release.yml
stubs/openpyxl/cell/: _writer.pyi  cell.pyi  rich_text.pyi  text.pyi
stubs/openpyxl/chart/: _3d.pyi  _chart.pyi  axis.pyi  data_source.pyi  descriptors.pyi  pie_chart.pyi  print_settings.pyi  reference.pyi  series.pyi  series_factory.pyi  shapes.pyi  text.pyi
stubs/openpyxl/comments/: comment_sheet.pyi  shape_writer.pyi
stubs/openpyxl/compat/: strings.pyi
stubs/openpyxl/descriptors/: base.pyi  container.pyi  excel.pyi  nested.pyi  sequence.pyi  serialisable.pyi
stubs/openpyxl/drawing/: colors.pyi  drawing.pyi  spreadsheet_drawing.pyi
stubs/openpyxl/formatting/: formatting.pyi  rule.pyi
stubs/openpyxl/formula/: tokenizer.pyi  translate.pyi
stubs/openpyxl/packaging/: core.pyi  custom.pyi  extended.pyi  interface.pyi  manifest.pyi  relationship.pyi  workbook.pyi
stubs/openpyxl/pivot/: cache.pyi  fields.pyi  table.pyi
stubs/openpyxl/reader/: drawings.pyi  excel.pyi  strings.pyi  workbook.pyi
stubs/openpyxl/styles/: alignment.pyi  borders.pyi  cell_style.pyi  colors.pyi  differential.pyi  fills.pyi  fonts.pyi  named_styles.pyi  numbers.pyi  protection.pyi  proxy.pyi  styleable.pyi  stylesheet.pyi
stubs/openpyxl/utils/: bound_dictionary.pyi  cell.pyi  dataframe.pyi  datetime.pyi  formulas.pyi  indexed_list.pyi  inference.pyi  protection.pyi
stubs/openpyxl/workbook/: _writer.pyi  child.pyi  defined_name.pyi  protection.pyi  workbook.pyi
stubs/openpyxl/worksheet/: _read_only.pyi  _reader.pyi  _write_only.pyi  _writer.pyi  cell_range.pyi  copier.pyi  datavalidation.pyi  dimensions.pyi  filters.pyi  header_footer.pyi  hyperlink.pyi  merge.pyi  page.pyi  pagebreak.pyi  print_settings.pyi  properties.pyi  (+4 more)
tests/: README.md  conftest.py  test.sh  test_check_excel_refs.py  test_coverage_removal.py  test_excel_refs.sh  test_excel_validation.sh  test_integration_xl_test.py  test_update_excel_metadata.py  test_upload.sh  test_validate_upload.sh
tests/test_files/: has_broken_ref.xltm  has_broken_ref2.xltm  has_no_errors.xltm  ~$has_no_errors.xltm
(+2 files in other folders)
